--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
   "dependencies": {
     "@ambiot/material-ui-multiple-dates-picker": "^1.0.3",
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-html-support": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@date-io/date-fns": "^2.17.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@gecharita/ckeditor5-super-build": "^1.1.1-0.4-link",
     "@iconify/react": "^4.1.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.15.1",
@@ -58,6 +60,7 @@
     "date-fns": "^2.30.0",
     "formik": "^2.4.4",
     "history": "^5.3.0",
+    "jodit-react": "^1.3.39",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mui-one-time-password-input": "^2.0.0",
