--- a/.github/workflows/gitlab-trigger.yml
+++ b/.github/workflows/gitlab-trigger.yml
@@ -7,11 +7,11 @@ on:
 
 jobs:
   trigger-gitlab:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
     steps:
       - name: Trigger GitLab pipeline
         run: |
           curl --request POST \
             --form token=${{ secrets.GITLAB_TRIGGER_TOKEN }} \
             --form ref=master \
-            https://git.devtechnosys.tech/api/v4/projects/778/trigger/pipeline
+            https://git.devtechnosys.tech/api/v4/projects/453/trigger/pipeline
